--- a/index.html
+++ b/index.html
@@ -140,27 +140,9 @@
                 </li>
             </ol>
         </div>
-        <div class="container row" style="height: 350px" id="myDiv">
-
-        </div>
-        <div class="container-fluid" id="middle">
-                    <div class="row">
-                            <div class="col-md-4 text-center" id="left">
-                                    <img src="assets/images/up-arrow.gif" class="fade-in delayed" style="width: 100px">
-                                    <h2 class="buttonText mt-5 fade-in delayed">ASTRONAUTS<br><span style="font-size: 25px">Please Scroll Up</span></h2>
-                            </div>
-                            <div class="col-md-4 text-center" id="image">
-                                <div class=""><img src="assets/images/mooon-logo.png" class="img-fluid fade-out" id="logo" alt="image" style="width:250px;"/></div>
-                            </div>
-                            <div class="col-md-4 text-center" id="right">
-                                <div class="mb-4"><h2 class="buttonText mt-5 fade-in delayed">NEW RECRUITS<br> <span style="font-size: 25px">Please Scroll Down</span></h2>
-                                    <img src="assets/images/down-arrow.gif" class="fade-in delayed" style="width: 100px">
-                                </div>
-                            </div>
-                    </div>
-        </div>
-        <div class="row container" style="height: 350px">
-
+        <div class="container-fluid" id="myDiv" style="height: 100px"></div>
+        <div class="container-fluid" id="middle" style="align-items: center; justify-content: center">
+                            <img src="assets/images/animation.gif" style="width: 100%">
         </div>
 
     </section>
@@ -632,7 +614,7 @@
         }, 2000);
     });
 </script>
-<script>
+<!--<script>
     var delayInMilliseconds = 5000; //3 second
 
     setInterval(function() {
@@ -644,6 +626,6 @@
         document.getElementById("left").classList.add('col-md-6');
         document.getElementById("right").classList.add('col-md-6');
     }, delayInMilliseconds);
-</script>
+</script>-->
 </body>
 </html>
