--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
                 </li>
             </ol>
         </div>
-        <div class="container-fluid" id="myDiv" style="height: 100px"></div>
-        <div class="container-fluid" id="middle" style="align-items: center; justify-content: center">
+        <div class="container-fluid mx-auto my-auto pb-5" id="myDiv">
                             <img src="assets/images/animation.gif" style="width: 100%">
         </div>
 
