Card View Changes with animation

--- a/index.html
+++ b/index.html
@@ -66,72 +66,72 @@
 
     <!--event section starts-->
     <section class="dark">
-        <div class="container py-4">
+        <div class="container-fluid py-4">
             <ol class="ol-cards alternate">
-                <li style="--ol-cards-color-accent:#F721F8">
+                <li style="--ol-cards-color-accent:#F721F8" class="border-even">
                     <div class="step"><i class="fas fa-lock"></i></div>
                     <div class="title"></div>
-                    <div class="content">
+                    <div class="content text-center">
                         <span class="pl-5" style="font-size:50px;">Airdrop 1</span>
                     </div>
                 </li>
-                <li style="--ol-cards-color-accent:#ffffff">
+                <li style="--ol-cards-color-accent:#ffffff" class="border-odd">
                     <div class="step"><i class="fas fa-lock"></i></div>
                     <div class="title"></div>
                     <div class="content">
                         <span class="pl-5" style="font-size:50px;">Airdrop 77</span>
                     </div>
                 </li>
-                <li style="--ol-cards-color-accent:#F721F8">
+                <li style="--ol-cards-color-accent:#F721F8" class="border-even">
                     <div class="step"><i class="fas fa-lock"></i></div>
                     <div class="title"></div>
                     <div class="content">
                         <span class="pl-5" style="font-size:50px;">Airdrop 153</span>
                     </div>
                 </li>
-                <li style="--ol-cards-color-accent:#ffffff">
+                <li style="--ol-cards-color-accent:#ffffff" class="border-odd">
                     <div class="step"><i class="fas fa-lock"></i></div>
                     <div class="title"></div>
                     <div class="content">
                         <span class="pl-5" style="font-size:50px;">Airdrop 306</span>
                     </div>
                 </li>
-                <li style="--ol-cards-color-accent:#F721F8">
+                <li style="--ol-cards-color-accent:#F721F8" class="border-even">
                     <div class="step"><i class="fas fa-lock"></i></div>
                     <div class="title"></div>
                     <div class="content">
                         <span class="pl-5" style="font-size:50px;">Airdrop 612</span>
                     </div>
                 </li>
-                <li style="--ol-cards-color-accent:#ffffff">
+                <li style="--ol-cards-color-accent:#ffffff" class="border-odd">
                     <div class="step"><i class="fas fa-lock"></i></div>
                     <div class="title"></div>
                     <div class="content">
                         <span class="pl-5" style="font-size:50px;">Airdrop 1223</span>
                     </div>
                 </li>
-                <li style="--ol-cards-color-accent:#F721F8">
+                <li style="--ol-cards-color-accent:#F721F8" class="border-even">
                     <div class="step"><i class="fas fa-lock"></i></div>
                     <div class="title"></div>
                     <div class="content">
                         <span class="pl-5" style="font-size:50px;">Airdrop 2446</span>
                     </div>
                 </li>
-                <li style="--ol-cards-color-accent:#ffffff">
+                <li style="--ol-cards-color-accent:#ffffff" class="border-odd">
                     <div class="step"><i class="fas fa-lock"></i></div>
                     <div class="title"></div>
                     <div class="content">
                         <span class="pl-5" style="font-size:50px;">Airdrop 4992</span>
                     </div>
                 </li>
-                <li style="--ol-cards-color-accent:#F721F8">
+                <li style="--ol-cards-color-accent:#F721F8" class="border-even">
                     <div class="step" id="launch"><i class="fas fa-lock"></i></div>
                     <div class="title"></div>
                     <div class="content text-center" style="font-size: 40px">
                         Launch
                     </div>
                 </li>
-                <li style="--ol-cards-color-accent:#ffffff">
+                <li style="--ol-cards-color-accent:#ffffff" class="border-odd">
                     <div class="step" id="story_intro"><i class="fas fa-unlock"></i></div>
                     <div class="title"></div>
                     <div class="content text-center" style="font-size: 40px">
