--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                 </li>
             </ol>
         </div>
-        <div class="container-fluid mx-auto my-auto pb-5" id="myDiv">
-                            <img src="assets/images/animation.gif" style="width: 100%">
+        <div class="container-fluid mx-auto my-auto pb-5 gif-background" id="myDiv">
+
         </div>
 
     </section>
