--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </li>
             </ol>
         </div>
-        <div class="container-fluid mx-auto my-auto pb-5" id="myDiv row">
+        <div class="container-fluid mx-auto my-auto pb-5" id="myDiv">
             <img src="assets/images/animation.gif" id="image" style="width: 100%">
             <img src="assets/images/animation-2.gif" id="image2" style="width: 100%">
         </div>
@@ -615,7 +615,7 @@
     });
 </script>
 <script>
-    var delayInMilliseconds = 9800; //3 second
+    var delayInMilliseconds = 9700; //3 second
     document.getElementById("image2").style.display = "none";
     setInterval(function() {
         document.getElementById("image").style.display = "none";
