--- a/index.html
+++ b/index.html
@@ -140,9 +140,19 @@
                 </li>
             </ol>
         </div>
-        <div class="container-fluid mx-auto my-auto pb-5" id="myDiv">
-            <img src="assets/images/animation.gif" id="image" style="width: 100%">
-            <img src="assets/images/animation-2.gif" id="image2" style="width: 100%">
+        <div class="container-fluid mx-auto my-auto pt-5 pb-5 mt-5 mb-5" id="myDiv">
+            <div class="button-section pt-5 pb-5 mt-5 mb-5">
+                <div class="row pt-5 pb-4">
+                    <div class="col-md-6 text-center pt-5 pb-5 mt-5 mb-5">
+                        <div class="pt-5 pb-5 mt-5 mb-5"><h2 class="buttonText mb-5">ASTRONAUTS<br> <span style="font-size: 20px">Please Scrool Up</span>
+                        </h2></div>
+                    </div>
+                    <div class="col-md-6 text-center pt-5 pb-5 mt-5 mb-5">
+                        <div class="pt-5 pb-5 mt-5 mb-5"><h2 class="buttonText mb-5">NEW RECRUITS <br> <span style="font-size: 20px">Please Scrool Down</span>
+                        </h2></div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </section>
