--- a/index.html
+++ b/index.html
@@ -38,6 +38,128 @@
             background-image: url("assets/images/moon_1.png");
             background-repeat: no-repeat;
         }
+
+        .arrow-bottom,
+        .arrow-bottom:before {
+            position: absolute;
+            left: 50%;
+        }
+
+        .arrow-bottom {
+            width: 50px;
+            height: 50px;
+            top: 65%;
+            margin: -20px 0 0 -20px;
+            -webkit-transform: rotate(45deg);
+            border-left: none;
+            border-top: none;
+            border-right: 5px #fff solid;
+            border-bottom: 5px #fff solid;
+        }
+
+        .arrow-bottom:before {
+            content: "";
+            width: 20px;
+            height: 20px;
+            top: 50%;
+            margin: -20px 0 0 -20px;
+            border-left: none;
+            border-top: none;
+            border-right: 3px #fff solid;
+            border-bottom: 3px #fff solid;
+            animation-duration: 2s;
+            animation-iteration-count: infinite;
+            animation-name: arrow-bottom;
+        }
+
+        @keyframes arrow-bottom {
+            0% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+                transform: translate(10px, 10px);
+            }
+        }
+
+        .arrow-top,
+        .arrow-top:before {
+            position: absolute;
+            left: 50%;
+        }
+
+        .arrow-top {
+            width: 50px;
+            height: 50px;
+            top: 25%;
+            margin: -20px 0 0 -20px;
+            -webkit-transform: rotate(225deg);
+            border-left: none;
+            border-top: none;
+            border-right: 5px #fff solid;
+            border-bottom: 5px #fff solid;
+        }
+
+        .arrow-top:before {
+            content: "";
+            width: 20px;
+            height: 20px;
+            top: 50%;
+            margin: -10px 0 0 -10px;
+            border-left: none;
+            border-top: none;
+            border-right: 3px #fff solid;
+            border-bottom: 3px #fff solid;
+            animation-duration: 2s;
+            animation-iteration-count: infinite;
+            animation-name: arrow-top;
+        }
+
+        @keyframes arrow-top {
+            0% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+                transform: translate(10px, 10px);
+            }
+        }
+
+        #float {
+            opacity: 1;
+            position: relative;
+            -webkit-animation: floatBubble 10s normal ease-out;
+            animation: floatBubble 10s  normal ease-out;
+        }
+
+        @-webkit-keyframes floatBubble {
+            0% {
+                bottom:0px;
+                opacity: 0;
+            }
+            50% {
+                bottom:0px;
+                opacity: 1;
+            }
+            100% {
+                bottom: 500px;
+                opacity: 0;
+            }
+        }
+        @keyframes floatBubble {
+            0% {
+                bottom:0px;
+                opacity: 0;
+            }
+            50% {
+                bottom:0px;
+                opacity: 1;
+            }
+            100% {
+                bottom: 500px;
+                opacity: 0;
+            }
+        }
     </style>
 </head>
 <body style="">
@@ -143,13 +265,24 @@
         <div class="container-fluid mx-auto my-auto pt-5 pb-5 mt-5 mb-5" id="myDiv">
             <div class="button-section pt-5 pb-5 mt-5 mb-5">
                 <div class="row pt-5 pb-4">
-                    <div class="col-md-6 text-center pt-5 pb-5 mt-5 mb-5">
-                        <div class="pt-5 pb-5 mt-5 mb-5"><h2 class="buttonText mb-5">ASTRONAUTS<br> <span style="font-size: 20px">Please Scrool Up</span>
-                        </h2></div>
+                    <div class="col-md-5 text-center pt-5 pb-5 mt-5 mb-5">
+                        <div class="pt-5 pb-5 mt-5 mb-5">
+                            <div class="arrow-top"></div>
+                            <h2 class="buttonText mb-5">ASTRONAUTS<br> <span
+                                    style="font-size: 20px">Please Scrool Up</span>
+                            </h2>
+                        </div>
                     </div>
-                    <div class="col-md-6 text-center pt-5 pb-5 mt-5 mb-5">
-                        <div class="pt-5 pb-5 mt-5 mb-5"><h2 class="buttonText mb-5">NEW RECRUITS <br> <span style="font-size: 20px">Please Scrool Down</span>
-                        </h2></div>
+                    <div class="col-md-2 text-center pt-5 pb-5 mt-5 mb-5">
+                        <img src="assets/images/mooon-logo.png" height="250px" width="250px" id="float"/>
+                    </div>
+                    <div class="col-md-5 text-center pt-5 pb-5 mt-5 mb-5">
+                        <div class="pt-5 pb-5 mt-5 mb-5">
+                            <h2 class="buttonText mb-5">NEW RECRUITS <br> <span
+                                    style="font-size: 20px">Please Scrool Down</span>
+                            </h2>
+                            <div class="arrow-bottom"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -618,7 +751,7 @@
 <script src="assets/js/script.js"></script>
 
 <script>
-    $(function() {
+    $(function () {
         $('html, body').animate({
             scrollTop: $("#myDiv").offset().top
         }, 2000);
@@ -627,7 +760,7 @@
 <script>
     var delayInMilliseconds = 9700; //3 second
     document.getElementById("image2").style.display = "none";
-    setInterval(function() {
+    setInterval(function () {
         document.getElementById("image").style.display = "none";
         document.getElementById("image2").style.display = "block";
     }, delayInMilliseconds);
