--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         .arrow-top {
             width: 50px;
             height: 50px;
-            top: 25%;
+            top: 0%;
             margin: -20px 0 0 -20px;
             -webkit-transform: rotate(225deg);
             border-left: none;
@@ -126,19 +126,19 @@
         }
 
         #float {
-            opacity: 1;
+            opacity: 0;
             position: relative;
             -webkit-animation: floatBubble 10s normal ease-out;
-            animation: floatBubble 10s  normal ease-out;
+            animation: floatBubble 10s normal ease-out;
         }
 
         @-webkit-keyframes floatBubble {
             0% {
-                bottom:0px;
+                bottom: 0px;
                 opacity: 0;
             }
             50% {
-                bottom:0px;
+                bottom: 0px;
                 opacity: 1;
             }
             100% {
@@ -146,18 +146,69 @@
                 opacity: 0;
             }
         }
+
         @keyframes floatBubble {
             0% {
-                bottom:0px;
+                bottom: 0px;
                 opacity: 0;
             }
             50% {
-                bottom:0px;
+                bottom: 0px;
                 opacity: 1;
             }
             100% {
                 bottom: 500px;
                 opacity: 0;
+            }
+        }
+
+        .animateTextLeft {
+            position: relative;
+            -webkit-animation: textAnimLeft 5s normal ease-out;
+            animation: textAnimLeft 5s normal ease-out;
+            animation-delay: 8s;
+        }
+
+        @-webkit-keyframes textAnimLeft {
+            0% {
+                left: 0px;
+            }
+            100% {
+                left: 250px;
+            }
+        }
+
+        @keyframes textAnimLeft {
+            0% {
+                left: 0px;
+            }
+            100% {
+                left: 250px;
+            }
+        }
+
+        .animateTextRight {
+            position: relative;
+            -webkit-animation: textAnimRight 5s normal ease-out;
+            animation: textAnimRight 5s normal ease-out;
+            animation-delay: 8s;
+        }
+
+        @-webkit-keyframes textAnimRight {
+            0% {
+                right: 0px;
+            }
+            100% {
+                right: 250px;
+            }
+        }
+
+        @keyframes textAnimRight {
+            0% {
+                right: 0px;
+            }
+            100% {
+                right: 250px;
             }
         }
     </style>
@@ -265,18 +316,18 @@
         <div class="container-fluid mx-auto my-auto pt-5 pb-5 mt-5 mb-5" id="myDiv">
             <div class="button-section pt-5 pb-5 mt-5 mb-5">
                 <div class="row pt-5 pb-4">
-                    <div class="col-md-5 text-center pt-5 pb-5 mt-5 mb-5">
-                        <div class="pt-5 pb-5 mt-5 mb-5">
+                    <div class="col-md-5 text-center pt-5 pb-5 mt-5 mb-5" id="textLeft">
+                        <div class="pt-5 pb-5 mt-5 mb-5 animateTextLeft">
                             <div class="arrow-top"></div>
                             <h2 class="buttonText mb-5">ASTRONAUTS<br> <span
                                     style="font-size: 20px">Please Scrool Up</span>
                             </h2>
                         </div>
                     </div>
-                    <div class="col-md-2 text-center pt-5 pb-5 mt-5 mb-5">
+                    <div class="col-md-2 text-center pt-5 pb-5 mt-5 mb-5" id="imageCentre">
                         <img src="assets/images/mooon-logo.png" height="250px" width="250px" id="float"/>
                     </div>
-                    <div class="col-md-5 text-center pt-5 pb-5 mt-5 mb-5">
+                    <div class="col-md-5 text-center pt-5 pb-5 mt-5 mb-5 animateTextRight" id="textRight">
                         <div class="pt-5 pb-5 mt-5 mb-5">
                             <h2 class="buttonText mb-5">NEW RECRUITS <br> <span
                                     style="font-size: 20px">Please Scrool Down</span>
@@ -756,14 +807,14 @@
             scrollTop: $("#myDiv").offset().top
         }, 2000);
     });
-</script>
-<script>
-    var delayInMilliseconds = 9700; //3 second
-    document.getElementById("image2").style.display = "none";
-    setInterval(function () {
-        document.getElementById("image").style.display = "none";
-        document.getElementById("image2").style.display = "block";
-    }, delayInMilliseconds);
+
+    setInterval(myTimer, 13000);
+    function myTimer() {
+        document.getElementById("textLeft").style.left = "250px";
+        document.getElementById("textRight").style.right = "250px";
+    }
+
+
 </script>
 </body>
 </html>
