--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
     <!--event section starts-->
     <section class="dark">
-        <div class="container-fluid py-4">
+        <div class="container-fluid-card py-4">
             <ol class="ol-cards alternate">
                 <li style="--ol-cards-color-accent:#F721F8" class="border-even py-4">
                     <div class="step"><i class="fas fa-lock"></i></div>
