Minting page font color update

--- a/minting_new.html
+++ b/minting_new.html
@@ -242,10 +242,10 @@
         <div class="container-fluid-card py-4" style="height: 500px">
             <div class="row py-4">
                 <div class="col-md-6 text-right">
-                    <a href="#" class="buttonText" style="font-size: 25px;">Twitter</a>
+                    <a href="#" class="buttonText" style="font-size: 25px; color: #F721F8FF;">Twitter</a>
                 </div>
                 <div class="col-md-6 text-left">
-                    <a href="#" class="buttonText text-left" style="font-size: 25px;">Discord</a>
+                    <a href="#" class="buttonText text-left" style="font-size: 25px; color: #F721F8FF;">Discord</a>
                 </div>
             </div>
             <div class="container-fluid mx-auto">
