Minting page update 03/03/22

--- a/minting_new.html
+++ b/minting_new.html
@@ -228,7 +228,6 @@
                         <p class="mt-5 pt-4 pr-5">
                             <i class="fab fa-discord fa-3x text-white"></i>
                             <i class="fas fa-file-download fa-3x ml-4 text-white"></i>
-                            <i class="fab fa-apple fa-3x ml-4 text-white"></i>
                         </p>
                     </div>
                 </div>
@@ -240,16 +239,8 @@
     <!--event section starts-->
     <section class="dark">
         <div class="container-fluid-card py-4" style="height: 500px">
-            <div class="row py-4">
-                <div class="col-md-6 text-right">
-                    <a href="#" class="buttonText" style="font-size: 25px; color: #F721F8FF;">Twitter</a>
-                </div>
-                <div class="col-md-6 text-left">
-                    <a href="#" class="buttonText text-left" style="font-size: 25px; color: #F721F8FF;">Discord</a>
-                </div>
-            </div>
-            <div class="container-fluid mx-auto">
-                <h1 class="buttonText">The Moon Society</h1>
+            <div class="container-fluid mx-auto pt-5">
+                <h1 class="buttonText" style="font-size: 80px">The Moon Society</h1>
             </div>
 
         </div>
@@ -272,10 +263,10 @@
                 <div class="postcard__text">
                     <h1 class="postcard__title blue text-left text-center"><a href="#">The Moon Society</a></h1>
                     <div class="postcard__subtitle small">
-                        <span style="color: #F721F8FF; font-size: 20px">Total Minted 0/5000</span>
+                        <span style="color: #F721F8FF; font-size: 20px">Total Minted 0/10000</span>
                     </div>
                     <div class="row mx-auto">
-                        <span style="font-size: 20px">0.05 Eth + Gas fee <br> Max 20 per transaction</span>
+                        <span style="font-size: 20px">0.05 Eth + Gas fee <br> Max 5 per transaction</span>
                     </div>
                     <div class="row mx-auto">
                         <form class="form" action="#">
@@ -286,12 +277,12 @@
                                         <input class="form__input mint-input" type="number" name="#" id="#" value="1">
                                         <button class="form__btn-add input-wrap-right" type="button">+</button>
                                     </div>
-                                    <button class="form__btn-value input-five-button" type="button">5</button>
-                                    <button class="form__btn-value input-ten-button" type="button">10</button>
-                                    <button class="form__btn-value input-twenty-button" type="button">20</button>
+                                    <button class="form__btn-value input-five-button" type="button">1</button>
+                                    <button class="form__btn-value input-ten-button" type="button">3</button>
+                                    <button class="form__btn-value input-twenty-button" type="button">5</button>
                                 </div>
                                 <button class="form__btn js-popup-open mb-4" type="button">Connect wallet</button>
-                                <button class="form__btn mint-button" type="button">MINT Chubbs</button>
+                                <button class="form__btn mint-button" type="button">MINT Astronaut</button>
                             </div>
                         </form>
                     </div>
