moon image update

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         .custom-moon {
             margin-top: -15px;
-            background-image: url("assets/images/moon_1.png");
+            background-image: url("assets/images/moon.png");
             background-repeat: no-repeat;
         }
 
