minting page text change

--- a/minting_new.html
+++ b/minting_new.html
@@ -237,9 +237,9 @@
     <!--header section ends-->
 
     <!--event section starts-->
-    <section class="dark">
-        <div class="container-fluid-card py-4" style="height: 500px">
-            <div class="container-fluid mx-auto pt-5">
+    <section class="dark mt-5 pt-5">
+        <div class="container-fluid-card py-4 mt-5 pt-5" style="height: 500px">
+            <div class="container-fluid mx-auto pt-5 mt-5">
                 <h1 class="buttonText" style="font-size: 80px">The Moon Society</h1>
             </div>
 
