--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
                         <p class="mt-5 pt-4 pr-5">
                             <i class="fab fa-discord fa-3x text-white"></i>
                             <i class="fas fa-file-download fa-3x ml-4 text-white"></i>
-                            <i class="fab fa-apple fa-3x ml-4 text-white"></i>
+                            <i class="fab fa-twitter fa-3x ml-4 text-white"></i>
+                            <i class="fab fa-instagram fa-3x ml-4 text-white"></i>
                         </p>
                     </div>
                 </div>
